# stratum

./: .yamllint.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  rustfmt.toml
.config/: nextest.toml
.github/: CODEOWNERS  bors.toml  dependabot.yml  renovate.json
.github/workflows/: audit.yml  ci.yml  dep-review.yml  dependabot-pr.yml  pr.yml  release-please.yml  release.toml  release.yml  rust-clippy.yml  scorecards.yml
bench/: Cargo.toml
bench/benches/: bench_main.rs
bench/benches/benchmarks/: connections.rs  mod.rs
bench/src/: lib.rs
client/: Cargo.toml
client/src/: builder.rs  client.rs  lib.rs  types.rs
client/tests/: client-stratum-test.rs
proxy/: Cargo.toml
proxy/src/: main.rs
server/: Cargo.toml
server/benches/: default.rs
server/benches/benchmarks/: connections.rs  mod.rs  router.rs  session_list.rs
server/examples/: basic.rs  heap.rs
server/fuzz/: Cargo.toml
server/fuzz/fuzz_targets/: fuzz_target_1.rs
server/src/: api.rs  ban_manager.rs  builder.rs  config.rs  connection.rs  connection_list.rs  error.rs  frame.rs  global.rs  id_manager.rs  lib.rs  metrics.rs  miner.rs  miner_list.rs  parsing.rs  request.rs  result.rs  route.rs  router.rs  server.rs  session.rs  session_list.rs  tcp.rs  telemetry.rs  types.rs  upstream.rs  utils.rs  websockets.rs
server/src/api/: api.rs  error.rs  mod.rs  routes.rs  server.rs  state.rs
server/src/types/: connection_id.rs  difficulties.rs  difficulty.rs  difficulty_settings.rs  id.rs  miner_stats.rs  mod.rs  ready_indicator.rs  session_id.rs  var_diff_buffer.rs
server/tests/: README.md  attacks.rs  basic_server_websocket_test.rs  common.rs  performance.rs  signals.rs  tcp.rs  tests.rs  websockets.rs
types/: Cargo.toml
types/src/: error.rs  lib.rs  miner.rs  spec.rs  stratum_error.rs  traits.rs
types/src/params/: mod.rs
