[package]
name = "stratum-server"
version = "4.2.0"
authors = ["Sean Kilgarriff sean@urkel.com"]
rust-version = "1.65"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "The server code for the Rust Stratum implementation"
repository = "https://github.com/OpenPoolProject/stratum"

[features]
default = ["tcp", "api", "v1"]
api = ["axum", "hyper", "tower-http"]
tcp = []
upstream = []
btcagent = []
v1 = []
v2 = []

[dependencies]

# Futures
# @todo after full implementation, see if we can peel back some features here to
# the minimal required.
tokio = { version = "1.25.0", features = ["full"] }
async-trait = "0.1.63"
futures = "0.3.26"
tokio-util = { version = "0.7.4", features = ["time"]}
tokio-stream = { version = "0.1.11", features = ["net"]}

# API
axum = { version = "0.6.4", optional = true}
hyper = { version = "0.14.23", optional = true}
tower-http = { version = "0.3.4", features = ["cors"], optional = true}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
extended-primitives = {version = "0.3.8"}

# Telemtry
tracing = "0.1.37"

# Primitives
uuid = { version = "1.2.2", features = ["serde", "v4"] }
bytes = "1.3.0"

# Utils
thiserror = "1.0.38"
bit-set = "0.5.3"

# @todo I believe we can replace this, but let's see
signal-hook = "0.3.14"
signal-hook-tokio = {version = "0.3.1", features = ["futures-v0_3"]}
dashmap = {version = "5.4.0"}
rlimit = "0.9.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tokio-test = "0.4.2"
criterion = {version = "0.4", features = ["async_tokio"]}

# Allocator @todo switch this to mimalloc
jemallocator = "0.5.0"

tracing-subscriber = {version = "0.3", features = ["env-filter"] }


[package.metadata.release]
tag = false
sign-commit = false
pre-release-commit-message = "chore(server): release {{ version }}"

# @todo bring back benchmarks here.
[[bench]]
name = "default"
harness = false
# required-features = ["benches"]
