[package]
name = "stratum-server"
version = "5.5.4"
authors = ["Sean Kilgarriff sean@urkel.com"]
rust-version = "1.65"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "The server code for the Rust Stratum implementation"
repository = "https://github.com/OpenPoolProject/stratum"

[features]
default = ["tcp", "api", "v1"]
api = ["axum", "hyper", "tower-http"]
tcp = []
upstream = []
btcagent = []
v1 = []
v2 = []
dhat-heap = []

[dependencies]

# Futures
# @todo after full implementation, see if we can peel back some features here to
# the minimal required.
tokio = { version = "1.27.0", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.27"
tokio-util = { version = "0.7.7", features = ["time"]}
tokio-stream = { version = "0.1.12", features = ["net"]}

# API
axum = { version = "0.6.12", optional = true}
hyper = { version = "0.14.24", optional = true}
tower-http = { version = "0.4.0", features = ["cors"], optional = true}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.94"
extended-primitives = {version = "0.3.8"}

# Telemtry
tracing = "0.1.37"

# Primitives
uuid = { version = "1.3.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
bytes = "1.4.0"

# Utils
thiserror = "1.0.40"
bit-set = "0.5.3"
dashmap = {version = "5.4.0"}
rlimit = "0.9.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tokio-test = "0.4.2"
criterion = {version = "0.4", features = ["async_tokio"]}
anyhow = "1.0"

##### Allocators #####

dhat = "0.3.2"

# Allocator @todo switch this to mimalloc
jemallocator = "0.5.0"

tracing-subscriber = {version = "0.3", features = ["env-filter"] }


[package.metadata.release]
tag = false
sign-commit = false
pre-release-commit-message = "chore(server): release {{ version }}"

# @todo bring back benchmarks here.
[[bench]]
name = "default"
harness = false
# required-features = ["benches"]
