[package]
name = "stratum-server"
version = "5.6.0"
authors = ["Sean Kilgarriff sean@urkel.com"]
rust-version = "1.67.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "The server code for the Rust Stratum implementation"
repository = "https://github.com/OpenPoolProject/stratum"

[features]
default = ["tcp", "api", "v1"]
api = ["axum", "hyper", "tower-http"]
tcp = []
upstream = []
btcagent = []
v1 = []
v2 = []
dhat-heap = []

[dependencies]

# Futures
# @todo after full implementation, see if we can peel back some features here to
# the minimal required.
tokio = { version = "1.35.1", features = ["full"] }
async-trait = "0.1.74"
futures = "0.3.29"
tokio-util = { version = "0.7.10", features = ["time"]}
tokio-stream = { version = "0.1.14", features = ["net"]}

# API
axum = { version = "0.7.4", optional = true}
hyper = { version = "1.1.0", optional = true}
tower-http = { version = "0.5.1", features = ["cors"], optional = true}

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.113"
extended-primitives = {version = "0.3.8"}

# Telemtry
tracing = "0.1.40"

# Primitives
uuid = { version = "1.7.0", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
bytes = "1.5.0"

# Utils
thiserror = "1.0.50"
bit-set = "0.5.3"
dashmap = {version = "5.5.3"}
rlimit = "0.10.1"
parking_lot = "0.12"

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }
tokio-test = "0.4.3"
criterion = {version = "0.5", features = ["async_tokio"]}
anyhow = "1.0"

##### Allocators #####

dhat = "0.3.2"

# Allocator @todo switch this to mimalloc
jemallocator = "0.5.4"

tracing-subscriber = {version = "0.3", features = ["env-filter"] }


[package.metadata.release]
tag = false
sign-commit = false
pre-release-commit-message = "chore(server): release {{ version }}"

# @todo bring back benchmarks here.
[[bench]]
name = "default"
harness = false
# required-features = ["benches"]
