[package]
name = "stratum-types"
version = "0.9.25"
authors = ["Urkel Labs Engineering <engineering@urkellabs.com>"]
edition = "2018"
license = "MIT"
description = "The types for the Rust Stratum (v1) implementation."

[dependencies]

# Unknown Externals
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1.22"
futures = "0.3.1"
#@todo not saying I don't trust this guy, but Ideally bake this in ourselves before releasing this more publically.
serde_tuple = "0.5.0"
uuid = { version = "0.8", features = ["serde", "v4"] }

# [package.metadata.release]
# pre-release-replacements = [
#   {file="../README.md", search="Current release: [a-z0-9\\.-]+", replace="Current release: {{version}}", exactly=1} ,
#   {file="../client/Cargo.toml", search="path = \"../types\", version = .* ", replace="path = \"../types\", version = \"{{version}}\" ", exactly=1},
#   {file="../server/Cargo.toml", search="path = \"../types\", version = .* ", replace="path = \"../types\", version = \"{{version}}\" ", exactly=1},
#   {file="../CHANGELOG.md", search="Unreleased", replace="{{version}}", exactly=2},
#   {file="../CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
#   {file="../CHANGELOG.md", search="ReleaseDate", replace="{{date}}", exactly=1},
#   {file="../CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate", exactly=1},
#   {file="../CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/UrkelLabs/stratum/compare/{{tag_name}}...HEAD", exactly=1},
# ]
